layout bug fixes

--- a/Final/src/main/resources/static/css/indexStyle.css
+++ b/Final/src/main/resources/static/css/indexStyle.css
@@ -116,8 +116,8 @@ body {
 .background {
     z-index: 0;
     /*position: absolute;*/
-    top: 64px;
-    left: 0;
+    /*top: 40px;*/
+    /*left: 0;*/
     width: 100%;
     height: 100%;
     opacity: 0.03;
@@ -130,6 +130,7 @@ body {
     width: 1600px;
     height: 798px;
     position: relative;
+    top: -24px;
 }
 
 
@@ -147,7 +148,7 @@ body {
 
 .background-text {
     position: relative;
-    bottom: 90vh;
+    bottom: 105vh;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -167,7 +168,7 @@ body {
 
 .search-bar {
     position: relative;
-    bottom: 80vh;
+    bottom: 95vh;
     /*z-index: 2;*/
     width: 80%;
     height: 100%;
@@ -230,6 +231,7 @@ body {
     /*flex: 1 1 0;*/
     /*flex: 1 2 150px;*/
     height: 32px;
+    width: 12vw;
     color: #7C8DB0;
     font-size: 18px;
 }
