--- a/Final/src/main/resources/static/css/login.css
+++ b/Final/src/main/resources/static/css/login.css
@@ -2,16 +2,16 @@
     width: 100%;
     height: 100%;
     position: relative;
-    bottom: 95vh;
-    left: 23.5vw;
+    bottom: 111vh;
+    left: 21vw;
 }
 
 .register-positioner {
     width: 100%;
     height: 100%;
     position: relative;
-    bottom: 98.2vh;
-    left: 23.5vw;
+    bottom: 114.55vh;
+    left: 21vw;
 
 }
 
